[package]
name = "demiurgos"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
#rrgen = "0.5"
#rrgen = { git = "https://github.com/dinosath/rrgen.git" }
rrgen = { path = "../rrgen/rrgen" }
clap_derive = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
git2 = "0.14"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = {version = "1.10.0",features = ["v4", "fast-rng", ] }
semver = "1.0"
anyhow = "1.0.86"
